@@ -1,5 +1,5 @@
 #!/bin/sh
-version=3.11
+version=3.12
 #########################################################################
 ##                                                                     ##
 ##  pdfjam: A shell-script interface to the "pdfpages" LaTeX package   ##
@@ -1144,7 +1144,7 @@ do
 	    then
 		if tty -s ; then
 		    error_exit \
-		 "tty is connected to connected to stdin, no PDF/JPG/PNG file found" \
+		 "tty is connected to stdin, no PDF/JPG/PNG file found" \
 			$E_NOINPUT
 		fi
 		cat > "$uniqueName"
