@@ -1,4 +1,4 @@
-% $Id: tex.ch 71563 2024-06-19 18:00:56Z ascherer $
+% $Id: tex.ch 71638 2024-06-28 02:53:10Z ascherer $
 % tex.ch for C compilation with web2c, derived from various other change files.
 % By Tim Morgan, UC Irvine ICS Department, and many others.
 %
@@ -5029,7 +5029,7 @@ if x=1 then mltex_enabled_p:=true
 else if x<>0 then goto bad_fmt;
 @z
 
-@x [54.1379] l.24996 - extra routines
+@x [55.1380] l.24996 - extra routines
 @* \[55] Index.
 @y
 
